tx status endpoint
