# localrpc/handlers.go
@@ -612,6 +612,67 @@ func (srpc *Handlers) HandleLocalStateGetMinedTransaction(ctx context.Context, r
 	return result, nil
 }
 
+// HandleLocalStateGetTransactionStatus ...
+func (srpc *Handlers) HandleLocalStateGetTransactionStatus(ctx context.Context, req *pb.TransactionStatusRequest) (*pb.TransactionStatusResponse, error) {
+	if err := srpc.notReady(); err != nil {
+		return nil, err
+	}
+
+	srpc.logger.Debugf("HandleLocalStateGetTransactionStatus: %v", req)
+	txHash, err := ReverseTranslateByte(req.TxHash)
+	if err != nil {
+		return nil, err
+	}
+	if len(txHash) != 32 {
+		return nil, fmt.Errorf("invalid length for TxHash: %v", len(req.TxHash))
+	}
+
+	var tx *objs.Tx
+	var isMined bool
+	err = srpc.database.View(func(txn *badger.Txn) error {
+		txi, missing, err := srpc.AppHandler.MinedTxGet(txn, [][]byte{txHash})
+		if err != nil && len(missing) == 0 && len(txi) == 1 {
+			tmp, ok := txi[0].(*objs.Tx)
+			if ok {
+				tx = tmp
+				isMined = true
+				return nil
+			}
+		}
+
+		os, err := srpc.database.GetOwnState(txn)
+		if err != nil {
+			return err
+		}
+		txi, missing, err = srpc.AppHandler.PendingTxGet(txn, os.SyncToBH.BClaims.Height, [][]byte{txHash})
+		if err != nil {
+			return err
+		}
+		if len(missing) == 0 && len(txi) == 1 {
+			tmp, ok := txi[0].(*objs.Tx)
+			if ok {
+				tx = tmp
+				isMined = false
+				return nil
+			}
+		}
+		return fmt.Errorf("unknown transaction: %s", req.TxHash)
+	})
+	if err != nil {
+		return nil, err
+	}
+
+	result := &pb.TransactionStatusResponse{IsMined: isMined}
+	if req.Full {
+		txOut, err := ForwardTranslateTx(tx)
+		if err != nil {
+			return nil, err
+		}
+		result.Tx = txOut
+	}
+	return result, nil
+}
+
 func (srpc *Handlers) HandleLocalStateGetTxBlockNumber(ctx context.Context, req *pb.TxBlockNumberRequest) (*pb.TxBlockNumberResponse, error) {
 	if err := srpc.notReady(); err != nil {
 		return nil, err
